...

	return (
		<Screen
			safeAreaEdges={['bottom']}
			withKeyboard={false}
			scrollable
			testID="invoice-detail-screen"
			header={
				<ScreenHeader
					title={invoice.invoice_number}
					titleAccessibilityLabel="invoice-detail-screen"
					rightElement={
						<TouchableOpacity
...
