...
			safeAreaEdges={['bottom']}
			withKeyboard={false}
			scrollable
			header={
				<ScreenHeader
					title={item.design_name}
					titleAccessibilityLabel="inventory-detail-screen"
					rightElement={
						<TouchableOpacity
							style={{ padding: s.xs }}
							onPress={() => router.push(`/(app)/inventory/add?id=${item.id}`)}
						>
							<Edit size={22} color={c.primary} strokeWidth={2} />
...
